Change map one and two, add interactivity

--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
-
-
-        <link rel="stylesheet" href="./css/main.css">
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-1.8.1.js" integrity="sha256-e6rn3uRMD1/JU+Fd/OYCf2OSFcUOXHQlkCL0rYR/JUM=" crossorigin="anonymous"></script> -->
-
-        <!-- Load Leaflet CSS -->
-        <!-- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" /> -->
+        <!-- load leaflet css -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-
-        <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
-        <link rel="stylesheet" href="./css/leaflet.css">
-
+        <!-- <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" /> -->
+        <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+        <link rel="stylesheet" href="./css/main.css">
     </head>
 
     <body>
@@ -36,24 +28,12 @@
                     <img class="logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de Modernización Presidencia de la Nación">
                     <span class="redes">
                         <p class="comparti">Compartí</p>
-                        <!-- <img id="twitter" style="width: 35px;" src="./assets/twitter.svg" alt="twitter">
-                        <img id="facebook" style="width: 15px" src="./assets/face.svg" alt="facebook"> -->
-
-                        <!-- <a href="https://medium.com/datos-argentina" target="_blank" class="pull-right">
-                            <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://github.com/datosgobar" target="_blank" class="pull-right">
-                            <i class="fa fa-github-alt fa-2x" aria-hidden="true"></i>
-                        </a> -->
                         <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
                             <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                         </a>
                         <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
                             <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
                         </a>
-                        <!-- <a href="http://datos.gob.ar/" target="_blank" class="pull-right">
-                            DATOS.GOB.AR
-                        </a> -->
                     </span>
                 </div>
             </div>
@@ -75,7 +55,8 @@
             <div class="section section-one">
                 <div class="title-content fade-waiting">
                     <span class="title">Los argentinos más conectados</span>
-                    <span class="title-paragraph">El sector aerocomercial argentino continúa creciendo con el foco en potenciar la conectividad y la federalización. Mirá cómo fueron todos los vuelos del año.</span>
+                    <span class="title-paragraph">El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá cómo fueron todos los vuelos
+                        del año.</span>
                 </div>
                 <div id="mapOne"></div>
             </div>
@@ -89,11 +70,12 @@
                             Rutas aéreas de Argentina
                         </div>
                         <span class="button-container fade-waiting">
+                            <span id="cabotaje" class="button">
+                                <span class="circle-indicator circle-locales"></span>Cabotaje</span>
                             <span id="internacional" class="button">
                                 <span class="circle-indicator circle-internacionales"></span>Internacionales</span>
-                            <span id="local" class="button">
-                                <span class="circle-indicator circle-locales"></span>Locales</span>
-                            <span id="all" class="button button-active">Todos</span>
+
+                            <span id="todos" class="button button-active">Todos</span>
                         </span>
                     </div>
                 </span>
@@ -101,30 +83,18 @@
                 <div id="footer-info" class="footer-info">
                     <div class="footer-content">
                         <div id="footer-text" class="footer-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            En 2017 se realizaron 9,4% más de vuelos que en 2016.
                         </div>
 
-                        <div id="footer-number">109.000</div>
+                        <div id="footer-number">324.990</div>
                         <div id="footer-rutas" class="footer-rutas">Todas las rutas</div>
 
                     </div>
                 </div>
-
             </div>
-            <!-- <div class="section section-four">
-                <span class="selector selector-two">
-                    <span class="button-container fade-waiting">
-                        <span id="ezeiza" class="button button-active">EZEIZA</span>
-                        <span id="cordoba" class="button">CORDOBA</span>
-                        <span id="mendoza" class="button">MENDOZA</span>
-                    </span>
-                </span>
-                <span id="iframe"></span>
-                <div id="mapThree"></div>
-            </div> -->
+
             <div class="section section-three">
                 <div class="scroll-box">
-
                     <!-- SECTION ONE -->
                     <div class="secOne">
                         <div class="secOne-content">
@@ -250,18 +220,19 @@
 
         <!-- Load Leaflet and Carto libraries -->
         <!-- <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script> -->
+        <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script> -->
         <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15.8/cartodb.js"></script>
-        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 
-        <!-- <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.0-beta/carto.min.js"></script> -->
-        <!-- include cartodb.js library -->
-        <!-- <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script> -->
         <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.2/carto.min.js"></script>
 
 
         <!-- call to library for controlling GIF animation -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+
+
+
+
         <script src="./js/buttons.js"></script>
         <script src="./js/mapOne.js"></script>
         <script src="./js/mapTwo.js"></script>
