Add content and create new section three

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                         <div class="secOne-content">
                             <div class="secOne-text-container">
                                 <div class="secOne-title">
-                                    Destinos internacionales más volados desde Argentina
+                                    De Argentina al mundo
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Ciudades a dónde más se vuela desde la Argentina en 2017, en porcentajes. Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit. Proin et turpis odio.
+                                    Estas son las rutas más transitadas hacia el exterior. Durante el 2017 el viaje Aeroparque-San Pablo fue el más realizado
+                                    con 4.007 vuelos regulares.
                                 </div>
                             </div>
                             <img class="vuelos-internacionales-svg" src="./assets/provisorios/vuelos_internacionales-01.svg" alt="">
@@ -118,12 +118,10 @@
                             <img class="vuelos-nacionales-svg" src="./assets/provisorios/vuelos_nacionales-01.svg" alt="">
                             <div class="secOne-text-container">
                                 <div class="secOne-title">
-                                    Destinos internos más volados
+                                    Las rutas de cabotaje más transitadas
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Ciudades a dónde más se vuela dentro de Argentina en 2017, en porcentajes. Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit. Proin et turpis odio.
-
+                                    Durante el 2017 la ruta Aeroparque-Córdoba fue más tránsitada con 19.665 vuelos regulares.
                                 </div>
                             </div>
                         </div>
@@ -132,17 +130,35 @@
                     <!-- SECTION THREE -->
                     <div class="secThree">
                         <div class="secThree-content">
-                            <div class="secThree-title">Cuánto se incrementaron los vuelos</div>
-                            <div class="grafico-torta-container">
-                                <img class="torta tortaOne" src="./assets/provisorios/grafico_torta-01.svg" alt="">
-                                <img class="torta" src="./assets/provisorios/grafico_torta-01.svg" alt="">
-                                <img class="torta" src="./assets/provisorios/grafico_torta-01.svg" alt="">
+                            <div class="secThree-title">Más vuelos, más pasajeros, más conectados</div>
+                            <div class="box-container-section">
+                                <div class="box-section">
+                                    <img class="icon" src="./assets/icono_avion.svg" alt="">
+                                    <div class="box-number">324.990</div>
+                                    <div class="box-text">
+                                        Son los vuelos regulares realizados. Un 9,4% más que en 2016.
+                                    </div>
+                                </div>
+                                <div class="box-section">
+                                    <img class="icon-rutas" src="./assets/icono_rutas.svg" alt="">
+                                    <div class="box-number">54</div>
+                                    <div class="box-text">
+                                        Nuevas rutas. Desde 2015 se sumaron 31 rutas de cabotaje y 23 internacionales.
+                                    </div>
+                                </div>
+                                <div class="box-section">
+                                    <img class="icon" src="./assets/icono_pasajero.svg" alt="">
+                                    <div class="box-number">27.659.925</div>
+                                    <div class="box-text">
+                                        Es la cantidad de pasajeros transportados, un 15% más que en 2016.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- SECTION FOUR -->
-                    <div class="secFour wait-fade-arrow">
+                    <!-- <div class="secFour wait-fade-arrow">
                         <div class="secFour-content">
                             <div class="secFour-title">
                                 Vuelos en relación al clima
@@ -152,33 +168,37 @@
                                 La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
                             </div>
                             <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_bariloche-01.svg" alt="grafico vuelos a bariloche según el clíma">
-                            <!-- mobile graph -->
+                            mobile graph
                             <img class="grafico-lineas-bariloche-mobile" src="./assets/provisorios/bariloche_mobile.svg" alt="grafico vuelos a bariloche según el clíma">
                             <div class="secFour-paragraph">
                                 <span class="secFour-subtitle subtitle-two">Puerto Iguazú</span>
                                 La mayor cantidad de vuelos a este destino se registraron en los dias de más calor.
                             </div>
                             <img class="grafico-lineas-iguazu" src="./assets/provisorios/grafico_lineas_iguazu-01.svg" alt="grafico vuelos a Iguazú según el clíma">
-                            <!-- mobile graph -->
+                            mobile graph
                             <img class="grafico-lineas-iguazu-mobile" src="./assets/provisorios/iguazu_mobile.svg" alt="grafico vuelos a Iguazú según el clíma">
                         </div>
-                    </div>
+                    </div> -->
                     <!-- SECTION FIVE -->
                     <div class="secFive">
                         <div class="secFive-content">
-                            <div class="secFive-title">
+                            <!-- <div class="secFive-title">
                                 ¿Querés saber más sobre este tema?
                             </div>
                             <div class="verCuriosidades-button">
                                 VER CURIOSIDADES
-                            </div>
+                            </div> -->
                             <div class="secFive-paragraph">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                <strong>tempor incididunt ut labore</strong> et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Este producto es posible gracias a los datos
+                                <strong>
+                                    <a href="#" style="color: rgb(80, 146, 213)">EANA</a>.
+                                </strong> Acá podés consultar el conjunto de datos original para que puedas explorarlos y
+                                hacer tus propios análisis.
                             </div>
                             <span class="escribenos">¿Encontraste algún error? Por favor,
-                                <a href="#" style="color: rgb(80, 146, 213)">escribinos</a>
+                                <strong>
+                                    <a href="#" style="color: rgb(80, 146, 213)">escribinos</a>.
+                                </strong>
                             </span>
                         </div>
                     </div>
