--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- load leaflet css -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
         <!-- <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" /> -->
-        <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+        <!-- <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" /> -->
         <link rel="stylesheet" href="./css/main.css">
     </head>
 
@@ -243,7 +243,7 @@
         <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script> -->
         <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15.8/cartodb.js"></script>
 
-        <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.2/carto.min.js"></script>
+        <!-- <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.2/carto.min.js"></script> -->
 
 
         <!-- call to library for controlling GIF animation -->
