--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
         <!-- load leaflet css -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+        <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
+
+        <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+
         <!-- <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" /> -->
         <!-- <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" /> -->
         <link rel="stylesheet" href="./css/main.css">
@@ -241,8 +245,8 @@
         <!-- Load Leaflet and Carto libraries -->
         <!-- <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script> -->
         <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script> -->
-        <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15.8/cartodb.js"></script>
-
+        <!-- <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15.8/cartodb.js"></script> -->
+        <!-- <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" /> -->
         <!-- <script src="https://cartodb-libs.global.ssl.fastly.net/carto.js/v4.0.2/carto.min.js"></script> -->
 
 
