Add mobile clickable interface for airport info

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
 
             <div class="section section-two">
+
                 <div id="map"></div>
 
                 <span class="selector">
@@ -83,7 +84,7 @@
                         </span>
                     </div>
                 </span>
-
+                <div id="popup-custom"></div>
                 <div id="footer-info" class="footer-info">
                     <div class="footer-content">
                         <div id="footer-text" class="footer-text">
@@ -91,7 +92,7 @@
                         </div>
 
                         <div id="footer-number">324.990</div>
-                        <div id="footer-rutas" class="footer-rutas">Todas las rutas</div>
+                        <div id="footer-rutas" class="footer-rutas">vuelos regulares totales en 2017</div>
 
                     </div>
                 </div>
