--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     Las rutas de cabotaje más transitadas
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Durante el 2017 la ruta Aeroparque-Córdoba fue más tránsitada con 19.665 vuelos regulares.
+                                    Durante el 2017 la ruta Aeroparque-Córdoba fue la más tránsitada con 19.665 vuelos regulares.
                                 </div>
                             </div>
                         </div>
