Update sections with new texts and svgs

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="section section-one">
                 <div class="title-content fade-waiting">
                     <span class="title">Los argentinos más conectados</span>
-                    <span class="title-paragraph">El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá cómo fueron todos los vuelos
-                        del año.</span>
+                    <span class="title-paragraph">El sector aerocomercial continúa creciendo y uniendo a los argentinos.
+                        Mirá cómo fueron todos los vuelos del año.</span>
                 </div>
                 <div id="mapOne"></div>
             </div>
@@ -100,19 +100,54 @@
 
             <div class="section section-three">
                 <div class="scroll-box">
+                    <!-- SECTION FOUR -->
+                    <div class="secFour wait-fade-arrow count">
+                        <div class="secFour-content">
+                            <div class="secFour-title">
+                                Durante el mes de julio de 2018 viajaron 1.359.907 pasajeros en vuelos de cabotaje, un 14% más que el año anterior.
+                            </div>
+                            <!-- <div class="secFour-paragraph">
+                                <span class="secFour-subtitle">San Carlos de Bariloche</span>
+                                La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
+                            </div> -->
+                            <img class="grafico-lineas-bariloche" src="./assets/final/fiebre desktop-01.svg" alt="grafico vuelos a bariloche según el clíma">
+                            <!-- mobile graph -->
+                            <img class="grafico-lineas-bariloche-mobile" src="./assets/final/fiebre-mobile-01.svg" alt="grafico vuelos a bariloche según el clíma">
+                        </div>
+                    </div>
+
+                    <!-- SECTION TWO -->
+                    <div class="secTwo">
+                        <div class="secOne-content secOne-content-two">
+
+                            <img class="vuelos-nacionales-svg" src="./assets/final/Mapa-aeropuestos.svg" alt="">
+                            <div class="secOne-text-container">
+                                <div class="secOne-title">
+                                    Aeropuertos que más crecieron
+                                </div>
+                                <div class="secOne-paragraph">
+                                    Estos son los cinco aeropuertos que más crecieron en cantidad de pasajeros.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- SECTION ONE -->
                     <div class="secOne">
                         <div class="secOne-content">
                             <div class="secOne-text-container">
                                 <div class="secOne-title">
-                                    De Argentina al mundo
+                                    Conectamos el país para unir a los argentinos
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Estas son las rutas más transitadas hacia el exterior. Durante el 2017 el viaje Aeroparque-San Pablo fue el más realizado
-                                    con 4.007 vuelos regulares.
+                                    Se incorporaron nuevas rutas aéreas para mejorar la conectividad dentro del país de una manera federal, sin pasar por Buenos
+                                    Aires. No incluyen los aeropuertos del área metropolitana de Buenos Aires.
+                                    <br/>
+                                    <br/>Nuevas rutas aéreas
+                                    <br/>Rutas aéreas hasta 2016
                                 </div>
                             </div>
-                            <img class="vuelos-internacionales-svg" src="./assets/provisorios/vuelos_internacionales-01.svg" alt="">
+                            <img class="vuelos-internacionales-svg" src="./assets/final/Mapa-rutas.svg" alt="">
                         </div>
                     </div>
 
@@ -120,20 +155,21 @@
                     <div class="secTwo count">
                         <div class="secOne-content secOne-content-two">
 
-                            <img class="vuelos-nacionales-svg" src="./assets/provisorios/vuelos_nacionales-01.svg" alt="">
+                            <img class="vuelos-nacionales-svg" src="./assets/final/Mapa-mundo_Mesa de trabajo 1.svg" alt="">
                             <div class="secOne-text-container">
                                 <div class="secOne-title">
-                                    Las rutas de cabotaje más transitadas
+                                    Nuevas conexiones hacia el mundo
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Durante el 2017 la ruta Aeroparque-Córdoba fue la más tránsitada con 19.665 vuelos regulares.
+                                    Nuevas ciudades con aeropuertos internacionales para poder recibir turistas del exterior y conocer el mundo sin tener que
+                                    hacer escala en Buenos Aires.
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- SECTION THREE -->
-                    <div class="secThree">
+                    <!-- <div class="secThree">
                         <div class="secThree-content">
                             <div class="secThree-title">Más vuelos, más pasajeros, más conectados</div>
                             <div class="box-container-section">
@@ -160,30 +196,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <!-- SECTION FOUR -->
-                    <!-- <div class="secFour wait-fade-arrow">
-                        <div class="secFour-content">
-                            <div class="secFour-title">
-                                Vuelos en relación al clima
-                            </div>
-                            <div class="secFour-paragraph">
-                                <span class="secFour-subtitle">San Carlos de Bariloche</span>
-                                La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
-                            </div>
-                            <img class="grafico-lineas-bariloche" src="./assets/provisorios/grafico_lineas_bariloche-01.svg" alt="grafico vuelos a bariloche según el clíma">
-                            mobile graph
-                            <img class="grafico-lineas-bariloche-mobile" src="./assets/provisorios/bariloche_mobile.svg" alt="grafico vuelos a bariloche según el clíma">
-                            <div class="secFour-paragraph">
-                                <span class="secFour-subtitle subtitle-two">Puerto Iguazú</span>
-                                La mayor cantidad de vuelos a este destino se registraron en los dias de más calor.
-                            </div>
-                            <img class="grafico-lineas-iguazu" src="./assets/provisorios/grafico_lineas_iguazu-01.svg" alt="grafico vuelos a Iguazú según el clíma">
-                            mobile graph
-                            <img class="grafico-lineas-iguazu-mobile" src="./assets/provisorios/iguazu_mobile.svg" alt="grafico vuelos a Iguazú según el clíma">
-                        </div>
                     </div> -->
+
+
+
                     <!-- SECTION FIVE -->
                     <div class="secFive">
                         <div class="secFive-content">
@@ -233,7 +249,8 @@
                                         <a href="mailto:datos@modernizacion.gob.ar">Contactanos</a>
                                     </li>
                                     <li>
-                                        <a href="https://datosgobar.github.io/" target="_blank">Nuestro equipo</a>
+                                        <a href="http://datos.gob.ar/acerca/seccion/Nuestro%20Equipo" target="_blank">Nuestro
+                                            equipo</a>
                                     </li>
                                 </ul>
                             </div>
