Corrects scroll event to hide arrows

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="section section-three">
                 <div class="scroll-box">
                     <!-- SECTION FOUR -->
-                    <div class="secFour wait-fade-arrow count">
+                    <div class="secFour count">
                         <div class="secFour-content">
                             <div class="secFour-title">
                                 Durante el mes de julio de 2018 viajaron 1.359.907 pasajeros en vuelos de cabotaje, un 14% más que el año anterior.
@@ -135,7 +135,7 @@
                     <!-- SECTION ONE -->
                     <div class="secOne">
                         <div class="secOne-content">
-                            <div class="secOne-text-container">
+                            <div class="secOne-text-container wait-fade-arrow">
                                 <div class="secOne-title">
                                     Conectamos el país para unir a los argentinos
                                 </div>
@@ -250,7 +250,8 @@
                                     </li>
                                     <li>
                                         <a href="http://datos.gob.ar/acerca/seccion/Nuestro%20Equipo" target="_blank">Nuestro
-                                            equipo</a>
+                                            equipo
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
