Corrects media queries for new svgs, changes texts

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                 <div id="popup-custom"></div>
                 <div id="footer-info" class="footer-info">
                     <div class="footer-content">
-                        <div id="footer-text" class="footer-text">
-                            En 2017 se realizaron 9,4% más de vuelos que en 2016.
-                        </div>
-
                         <div id="footer-number">324.990</div>
-                        <div id="footer-rutas" class="footer-rutas">vuelos regulares totales en 2017</div>
+                        <div class="footer-paragraph">
+                            <div id="footer-rutas" class="footer-rutas">Es la cantidad de vuelos totales.
+                            </div>
+                            <div id="footer-text" class="footer-text"></div>
+                        </div>
 
                     </div>
                 </div>
@@ -104,7 +104,8 @@
                     <div class="secFour count">
                         <div class="secFour-content">
                             <div class="secFour-title">
-                                Durante el mes de julio de 2018 viajaron 1.359.907 pasajeros en vuelos de cabotaje, un 14% más que el año anterior.
+                                Durante el mes de julio de 2018 viajaron <span class="bold">1.359.907 pasajeros en vuelos
+                                    de cabotaje</span>, un 14% más que el año anterior.
                             </div>
                             <!-- <div class="secFour-paragraph">
                                 <span class="secFour-subtitle">San Carlos de Bariloche</span>
@@ -143,8 +144,10 @@
                                     Se incorporaron nuevas rutas aéreas para mejorar la conectividad dentro del país de una manera federal, sin pasar por Buenos
                                     Aires. No incluyen los aeropuertos del área metropolitana de Buenos Aires.
                                     <br/>
-                                    <br/>Nuevas rutas aéreas
-                                    <br/>Rutas aéreas hasta 2016
+                                    <br/><span class="line"></span><span class="rutas-text-reference">Nuevas rutas aéreas</span>
+                                    <br/><span class="line grey"></span><span class="rutas-text-reference">Rutas aéreas hasta
+                                        2016
+                                    </span>
                                 </div>
                             </div>
                             <img class="vuelos-internacionales-svg" src="./assets/final/Mapa-rutas.svg" alt="">
