--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="secOne-content secOne-content-two">
 
                             <img class="vuelos-nacionales-svg" src="./assets/final/Mapa-aeropuestos.svg" alt="">
-                            <div class="secOne-text-container">
+                            <div class="secOne-text-container margin-top-text-container">
                                 <div class="secOne-title">
                                     Aeropuertos que más crecieron
                                 </div>
