--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
     </head>
 
     <body>
-
-
         <div class="navbar-container">
             <div class="navbar">
                 <div class="navbar-content">
-                    <img class="logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de Modernización Presidencia de la Nación">
+                    <img class="logo" src="./assets/final/Logo_Ministerio_Transporte-01.svg" alt="Ministerio de Modernización Presidencia de la Nación">
                     <span class="redes">
                         <p class="comparti">Compartí</p>
-                        <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
-                            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-                        </a>
                         <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
                             <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
+                            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                         </a>
                     </span>
                 </div>
@@ -89,9 +87,9 @@
                     <div class="footer-content">
                         <div id="footer-number">324.990</div>
                         <div class="footer-paragraph">
-                            <div id="footer-rutas" class="footer-rutas">Es la cantidad de vuelos totales.
+                            <div id="footer-rutas" class="footer-rutas">EVuelos totales entre ago-17 y ago-18.
                             </div>
-                            <div id="footer-text" class="footer-text"></div>
+                            <div id="footer-text" class="footer-text">Un 8% más de vuelos que en el período anterior. </div>
                         </div>
 
                     </div>
@@ -105,7 +103,7 @@
                         <div class="secFour-content">
                             <div class="secFour-title">
                                 Durante el mes de julio de 2018 viajaron <span class="bold">1.359.907 pasajeros en vuelos
-                                    de cabotaje</span>, un 14% más que el año anterior.
+                                    de cabotaje</span>, un 13% más que el mismo mes del año anterior.
                             </div>
                             <!-- <div class="secFour-paragraph">
                                 <span class="secFour-subtitle">San Carlos de Bariloche</span>
@@ -127,7 +125,8 @@
                                     Aeropuertos que más crecieron
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Estos son los cinco aeropuertos que más crecieron en cantidad de pasajeros.
+                                    Estos son los cinco aeropuertos que más crecieron en cantidad de pasajeros entre ago-17 y ago-18, respecto de igual período
+                                    anterior.
                                 </div>
                             </div>
                         </div>
@@ -141,13 +140,16 @@
                                     Conectamos el país para unir a los argentinos
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Se incorporaron nuevas rutas aéreas para mejorar la conectividad dentro del país de una manera federal, sin pasar por Buenos
-                                    Aires. No incluyen los aeropuertos del área metropolitana de Buenos Aires.
+                                    Se incorporaron nuevas rutas aéreas para mejorar la conectividad dentro del país de una manera federal, sin necesidad de
+                                    pasar por Buenos Aires.
                                     <br/>
                                     <br/><span class="line"></span><span class="rutas-text-reference">Nuevas rutas aéreas</span>
                                     <br/><span class="line grey"></span><span class="rutas-text-reference">Rutas aéreas hasta
                                         2016
                                     </span>
+                                    <br/>
+                                    <div class="no-incluyen-rutas">No incluyen los aeropuertos del área metropolitana de
+                                        Buenos Aires. </div>
                                 </div>
                             </div>
                             <img class="vuelos-internacionales-svg" src="./assets/final/Mapa-rutas.svg" alt="">
@@ -164,8 +166,8 @@
                                     Nuevas conexiones hacia el mundo
                                 </div>
                                 <div class="secOne-paragraph">
-                                    Nuevas ciudades con aeropuertos internacionales para poder recibir turistas del exterior y conocer el mundo sin tener que
-                                    hacer escala en Buenos Aires.
+                                    Nuevas ciudades con aeropuertos internacionales para poder recibir turistas del exterior y conocer el mundo sin necesidad
+                                    de hacer escala en Buenos Aires.
                                 </div>
                             </div>
                         </div>
@@ -227,7 +229,7 @@
                         </div>
                     </div>
 
-                    <div class="secSix">
+                    <!-- <div class="secSix">
                         <div class="secSix-content">
                             <div class="secSix-left">
                                 <span class="redes-secSix">
@@ -259,7 +261,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
