Arregla error de tipeo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="footer-content">
                         <div id="footer-number">324.990</div>
                         <div class="footer-paragraph">
-                            <div id="footer-rutas" class="footer-rutas">EVuelos totales entre ago-17 y ago-18.
+                            <div id="footer-rutas" class="footer-rutas">Vuelos totales entre ago-17 y ago-18.
                             </div>
                             <div id="footer-text" class="footer-text">Un 8% más de vuelos que en el período anterior. </div>
                         </div>
