Updates logos and text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar-container">
       <div class="navbar">
         <div class="navbar-content">
-          <img class="logo" src="./assets/final/Logo_Ministerio_Transporte-01.svg" alt="Ministerio de Modernización Presidencia de la Nación">
+          <img class="logo" src="./assets/final2/logo presidencia-01.svg" alt="Ministerio de Modernización Presidencia de la Nación">
           <span class="redes">
             <p class="comparti">Compartí</p>
             <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
@@ -83,11 +83,10 @@
         <!-- Footer rutas dinamico -->
         <div id="footer-info" class="footer-info">
           <div class="footer-content">
-            <div id="footer-number">324.990</div>
+            <div id="footer-number">206.963</div>
             <div class="footer-paragraph">
-              <div id="footer-rutas" class="footer-rutas">Vuelos totales entre ago-17 y ago-18.
-              </div>
-              <div id="footer-text" class="footer-text">Un 8% más de vuelos que en el período anterior.
+              <div id="footer-rutas" class="footer-rutas">Vuelos totales entre sep17-sep18.</div>
+              <div id="footer-text" class="footer-text">
               </div>
             </div>
           </div>
@@ -101,32 +100,31 @@
           <!-- SECTION ONE -->
           <div class="secFour count">
             <div class="secFour-content">
-              <div class="secFour-title">
-                Durante el mes de julio de 2018 viajaron <span class="bold">1.359.907 pasajeros en
-                  vuelos
-                  de cabotaje</span>, un 13% más que el mismo mes del año anterior.
+              <div class="secFour-title" style="font-size: 22px">
+                Durante el mes de septiembre de 2018 viajaron <span class="bold">1.326.571 pasajeros en vuelos de
+                  cabotaje</span>, un 13% más que el mismo mes del año anterior.
               </div>
               <!-- <div class="secFour-paragraph">
                     <span class="secFour-subtitle">San Carlos de Bariloche</span>
                     La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
                 </div> -->
-              <img class="grafico-lineas-bariloche" src="./assets/final/fiebre desktop-01.svg" alt="grafico vuelos a bariloche según el clíma">
+              <img class="grafico-lineas-bariloche" src="./assets/final2/grafico linea desktop.svg" alt="grafico vuelos a bariloche según el clíma">
               <!-- mobile graph -->
-              <img class="grafico-lineas-bariloche-mobile" src="./assets/final/fiebre-mobile-01.svg" alt="grafico vuelos a bariloche según el clíma">
+              <img class="grafico-lineas-bariloche-mobile" src="./assets/final2/grafico linea mobile.svg" alt="grafico vuelos a bariloche según el clíma">
             </div>
           </div>
 
           <!-- SECTION TWO -->
           <div class="secTwo">
             <div class="secOne-content secOne-content-two">
-              <img class="vuelos-nacionales-svg" src="./assets/final/Mapa-aeropuestos.svg" alt="">
+              <img class="vuelos-nacionales-svg" src="./assets/final2/mapa aeropuertos.svg" alt="">
               <div class="secOne-text-container margin-top-text-container">
                 <div class="secOne-title">
                   Aeropuertos que más crecieron
                 </div>
                 <div class="secOne-paragraph">
                   Estos son los cinco aeropuertos que más crecieron en cantidad de pasajeros entre
-                  ago-17 y ago-18, respecto de igual período
+                  Sep-17 y Sep-18, respecto de igual período
                   anterior.
                 </div>
               </div>
@@ -217,18 +215,29 @@
                                 VER CURIOSIDADES
                             </div> -->
               <div class="secFive-paragraph">
-                Este producto es posible gracias a los datos
+                Este producto es posible gracias a los datos proporcionados por
                 <strong>
                   <a href="#" style="color: rgb(80, 146, 213)">EANA</a>.
-                </strong> Acá podés consultar el conjunto de datos original para que puedas explorarlos
-                y
-                hacer tus propios análisis.
+                </strong> Acá podés consultar el conjunto de datos original para que puedas explorarlos y hacer tus
+                propios análisis. Desarrollado por la
+                <a href="#" style="color: rgb(80, 146, 213)">Secretaría de Modernización de la Nación.</a>
               </div>
               <span class="escribenos">¿Encontraste algún error? Por favor,
                 <strong>
                   <a href="#" style="color: rgb(80, 146, 213)">escribinos</a>.
                 </strong>
               </span>
+            </div>
+          </div>
+
+          <div class="secSix">
+            <div class="secSix-content">
+              <div class="secSix-left">
+                <span class="redes-secSix">
+                  <img class="secSix-logo" src="./assets/final2/logo transporte-01.svg" alt="Ministerio de modernización">
+                </span>
+                <img class="secSix-logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de modernización">
+              </div>
             </div>
           </div>
 
